name:          GLFW-b-demo
version:       1.0.0

author:        Brian Lewis <brian@lorf.org>
maintainer:    Brian Lewis <brian@lorf.org>

category:      Graphics
synopsis:      GLFW-b demo
description:
  This is a demonstration of GLFW-b that allows the user to interact with
  spinning gears using cursor keys, mouse, scroll wheel, and/or joystick.
  .
  Screenshot: http://i.imgur.com/JZKwVSu.png
  .
  GLFW-b: http://hackage.haskell.org/package/GLFW-b

license:       BSD3
license-file:  LICENSE

cabal-version: >= 1.10
build-type:    Simple

--------------------------------------------------------------------------------

executable GLFW-b-demo
  default-language: Haskell2010

  hs-source-dirs: src
  main-is: Main.hs

  build-depends:
    GLFW-b       == 0.*,
    OpenGL       == 2.8.*,
    base         == 4.*,
    mtl          == 2.*,
    pretty       == 1.*,
    stm          == 2.*,
    transformers == 0.*

  ghc-options: -Wall -O2
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

--------------------------------------------------------------------------------

source-repository head
  type:     git
  location: git://github.com/bsl/GLFW-b-demo.git
