name:          GLFW-b-demo
version:       1.0.6

author:        Brian Lewis <brian@lorf.org>
maintainer:    Brian Lewis <brian@lorf.org>

category:      Graphics
synopsis:      GLFW-b demo
description:
  This is a demonstration of GLFW-b
  (<http://hackage.haskell.org/package/GLFW-b>) allowing the user to interact
  with colorful spinning gears using cursor keys, mouse, scroll wheel, and
  joystick.
  .
  Here's a screenshot: <http://i.imgur.com/JZKwVSu.png>

license:       BSD3
license-file:  LICENSE

cabal-version: >= 1.10
build-type:    Simple

--------------------------------------------------------------------------------

extra-source-files:
  README.md
  TODO

--------------------------------------------------------------------------------

executable GLFW-b-demo
  default-language: Haskell2010

  hs-source-dirs: src
  main-is: Main.hs

  other-modules:
    Gear

  build-depends:
    GLFW-b       == 1.4.*,
    OpenGL       >= 2.8 && < 2.10,
    base          < 5,
    mtl          == 2.1.*,
    pretty       == 1.1.*,
    stm          == 2.4.*,
    transformers == 0.3.*

  ghc-options: -Wall -O2
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

--------------------------------------------------------------------------------

source-repository head
  type:     git
  location: git://github.com/bsl/GLFW-b-demo.git
